Update index.html to remove construction notice
Removed construction message from banner section.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<div class="inner">
 							<h2>Kaptain Frodo Computers</h2>
 							<div id="construction">
-								<h3>This page is under construction</h3>
+								<!--  <h3>This page is under construction</h3>  -->
 							</div>
 							<p>Computer and 3D Printing Services</p>
 						</div>
@@ -136,4 +136,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
