--- a/3dprinting.html
+++ b/3dprinting.html
@@ -41,7 +41,7 @@
 					<article id="main3">
 						<header>
 							<h2>3D Printing Services</h2>
-							<p>Professional 3D printing solutions for prototyping, custom manufacturing, and creative projects</p>
+							<p>3D printing solutions for prototyping, custom manufacturing, and creative projects</p>
 						</header>
 					<section class="wrapper style1-alt special">
 							<div class="inner">
@@ -113,3 +113,4 @@
 	</body>
 
 </html>
+
